<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    
	<ScrollView 
	    android:layout_height="match_parent"
	    android:layout_width="match_parent"
	    android:layout_alignParentTop="true"
	    android:layout_above="@+id/btn_regist_group"
	    android:layout_marginRight="8dp" >
	
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:padding="5dp" >
		    
		    <LinearLayout 
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content">
		        <TextView
			        android:id="@+id/name_text"
			        android:layout_width="80dp"
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:text="@string/str_name_text" />
		    	<EditText
			        android:id="@+id/name_edit"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:hint="@string/str_name_edit"/>
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical">
		        <TextView
			        android:id="@+id/time_text"
			        android:layout_width="80dp"
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:text="@string/str_time_text" />
		        <LinearLayout 
			        android:orientation="horizontal"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        style="?android:attr/buttonBarStyle">
			    	<Button
				        android:id="@+id/btn_date"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="1"
				        style="?android:attr/buttonBarButtonStyle"
				        android:text="@string/str_btn_date"/>
			    	<Button
				        android:id="@+id/btn_time"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_weight="1"
				        style="?android:attr/buttonBarButtonStyle"
				        android:text="@string/str_time_text"/>
		    	</LinearLayout>
		    </LinearLayout>
		    
		    <LinearLayout android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content">
		        <TextView
			        android:id="@+id/restaurant_text"
			        android:layout_width="80dp"
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:text="@string/str_restaurant_text" />
		        <Button
			        android:id="@+id/searchMap"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:drawableLeft="@android:drawable/ic_menu_mapmode"
			        android:text="@string/str_searchMap"/>
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content">
		    	<TextView
			        android:id="@+id/contacts_text"
			        android:layout_width="80dp"
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:text="@string/str_contacts_text" />
		        <Button
			        android:id="@+id/btn_contacts"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:drawableLeft="@android:drawable/ic_menu_add"
			        android:text="@string/str_btn_contacts" />
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:orientation="vertical"
		        android:layout_marginTop="15dp"
		        android:layout_marginLeft="8dp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content">
		        <TextView
			        android:id="@+id/add_restaurant_title"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:text="@string/str_add_restaurant_title"/>  
     
		        <TextView
			        android:id="@+id/retaurant_no_select"
			        android:layout_width="match_parent"
			        android:layout_height="0dp"
			        android:layout_gravity="center"
			        android:layout_marginTop="10dp"
			        android:padding="10dp"
			        android:background="@drawable/photo_frame"
			        android:gravity="center_horizontal"
			        android:text="@string/group_not_regist"
			        android:layout_weight="1"/> 
		        
		        
				<RelativeLayout 
				    android:id="@+id/restaurant_area"
				    android:orientation="horizontal"
			        android:layout_marginTop="10dp"
			        android:background="@drawable/photo_frame"
			        android:layout_width="match_parent" 
			        android:layout_height="wrap_content"
			        android:visibility="gone">
				 
				     <!-- icon -->
				     <RelativeLayout 
					     android:id="@+id/icon_area"
				         android:layout_width="70dp"
				         android:layout_height="70dp"
				         android:layout_margin="10dp"
				         android:layout_centerVertical="true"
				         android:orientation="vertical"
				         android:layout_gravity="center">
				         
				         
					     <ImageView
					         android:id="@+id/item_icon"
					         android:layout_width="70dp"
					         android:layout_height="70dp"
					         android:scaleType="centerCrop"
					         android:contentDescription="@string/contentDescription"
					         />
				     </RelativeLayout>
				     
					<LinearLayout 
					     android:id="@+id/description_area"
				         android:layout_width="match_parent"
				         android:layout_height="match_parent"
				         android:layout_toRightOf="@+id/icon_area"
				         android:layout_alignParentRight="true"
				         android:layout_marginRight="5dp"
				         android:layout_centerVertical="true"
				         android:layout_gravity="center"
				         android:orientation="vertical">
					    
					    <TextView
					         android:id="@+id/item_title"
					         android:layout_width="match_parent"
					         android:layout_height="wrap_content"
					         android:textSize="15sp"
					         android:textStyle="bold"
					         android:singleLine="true"
					         android:textColor="#000000"
					         android:layout_gravity="center"/>
					    
					    <LinearLayout 
						     android:id="@+id/vicinity_area"
					         android:layout_width="match_parent"
					         android:layout_height="wrap_content"
					         android:layout_gravity="center"
					         android:orientation="horizontal">
					        <ImageView 
						         android:layout_width="13sp"
						         android:layout_height="13sp"
						         android:layout_marginTop="3dp"
						         android:layout_marginRight="1dp"
						         android:src="@drawable/pin"
						         android:contentDescription="@string/contentDescription"/>
						    <TextView
						         android:id="@+id/item_vicinity"
						         android:layout_width="match_parent"
						         android:layout_height="wrap_content"
						         android:textSize="13sp"
						         android:singleLine="true"
						         android:textColor="#000000"/>
						    
					    </LinearLayout>
					</LinearLayout> 
				</RelativeLayout>
								
		        

			   
		        <TextView
			        android:id="@+id/contacts_title"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="15dp"
			        android:layout_gravity="center"
			        android:text="@string/str_contacts_title"/>
		        
		        <LinearLayout 
			        android:orientation="horizontal"
			        android:layout_marginTop="10dp"
			        android:padding="10dp"
			        android:background="@drawable/photo_frame"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content">
			    	
			    	<TextView
				        android:id="@+id/contacts_description"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:layout_weight="1"
				        android:text="@string/memeber_not_regist"/>
			   </LinearLayout>
		    </LinearLayout>
		    
		    
		</LinearLayout>
	</ScrollView>
    
    <Button
        android:id="@+id/btn_regist_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/str_btn_regist_group"  />
    
</RelativeLayout>
